--- a/index.css
+++ b/index.css
@@ -3,10 +3,8 @@
 }
 
 body{
-
-  margin:0px 90px;
+  margin:0px 50px;
  
-  
 }
 
 
@@ -61,7 +59,10 @@ a{
   font-weight:;
 }
 
-@media (min-width:700px){
+@media (min-width:600px){
+  body{
+    margin:0 90px;
+  }
   section.row {
     display:flex;
   }
