--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-*{
-  box-sizing: border-box;
-}
 
 body{
   margin:0px 50px;
@@ -50,7 +47,7 @@ h3{
 }
 
 img{
-  display:inline;
+  display:block;
   width: 150px;
   margin: 0 auto;
 }
@@ -63,6 +60,12 @@ a{
 
   section.row {
     display:flex;
+  }
+  
+  .main{
+    margin-top:20px;
+    marigin:0 auto;
+    
   }
   .about, .skill, .exp, .contact{
     width: 50%;
