--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
+*{
+  box-sizing: border-box;
+}
 
 body{
-  margin:0px 50px;
+  margin:0px;
  
 }
 
@@ -78,6 +81,10 @@ a{
     margin:auto;
     display:inline;
   }
+}
+
+.resume{
+  margin:0px 50px;
 }
 
 footer{
