--- a/index.css
+++ b/index.css
@@ -76,8 +76,8 @@ a{
   
   img{
     position: absolute;
-    right:0px;
-    bottom: 0px;
+    right:10px;
+    bottom: 10px;
     margin:auto;
     display:inline;
   }
@@ -88,6 +88,7 @@ a{
 }
 
 footer{
+  margin-bottom:0px;
   background-color:gray;
   padding:15px 20px;
   font-size:12px;
